--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -4,11 +4,46 @@
   <artifactId>automation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <cucumber.version>6.1.1</cucumber.version>
+    <junit.version>4.13.2 </junit.version>
+  </properties>
+  
+  
+  
+  
+  
+  
   <dependencies>
   		<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 		</dependency>
+		
+		
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>${cucumber.version}</version>
+    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>${cucumber.version}</version>
+    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>${junit.version}</version>
+    <scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 </project>
